# Airliner

./: .env.example  README.md  README.me  bun.lockb  package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: release.yml
airliner/: .env.example  bun.lockb  middleware.ts  package.json  pnpm-lock.yaml
airliner/app/: globals.css  header.tsx  layout.tsx  page.tsx  userProvider.tsx
airliner/app/(auth)/: utils.ts
airliner/app/(auth)/get-started/: page.tsx
airliner/app/(navbar)/changelog/: page.tsx
airliner/app/(navbar)/dashboard/: page.tsx
airliner/app/(navbar)/pricing/: page.tsx  productCard.tsx
airliner/app/api/(firebase)/generateToken/: route.ts
airliner/app/api/(models)/answer/: route.ts
airliner/app/api/(models)/speech/: route.ts
airliner/app/api/(models)/transcript/: route.ts
airliner/app/api/webhooks/: route.ts
airliner/components/ui/: dialog.tsx
airliner/state/: appState.ts
airliner/utils/: helpers.ts  stripe.ts  supabase.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/chat/: AudioRecorder.svelte  ChatInput.svelte  ChatMessages.svelte  DeviceChange.svelte  IDToken.svelte  recordTrigger.svelte
src/components/sidebar/: Sidebar.svelte  userAuth.svelte
src/components/ui/: button.ts
src/enums/: inputMode.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/conversations/: +page.svelte  +page.ts  Conversation.svelte
src/state/: index.ts
src/utils/: recorder.ts  supabase.ts
src/utils/simbrief/: simbriefInterface.ts  simbriefParser.ts
(+5 files in other folders)
