[package]
name = "Airliner"
version = "0.0.1"
description = "Your Co-Pilot and Virtual ATC for Microsoft Flight Simulator"
authors = ["Shubhamai"]
license = "GPL-3.0"
repository = "https://github.com/Shubhamai/Airliner"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["shell-open"] }
# window-shadows = "0.2.1"
anyhow = "1.0.71"
rdev = "0.5.2"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.17"
tauri-plugin-deep-link = "0.1.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
